--- a/index.css
+++ b/index.css
@@ -67,6 +67,7 @@ body {
 
 .loginButtonContainer {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	padding-top: 5vh;
