--- a/pages/css/notifs.css
+++ b/pages/css/notifs.css
@@ -1,6 +1,6 @@
 @media (max-width: 480px) {
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 
 * {
 	margin: 0px;
@@ -40,28 +40,11 @@ body {
 	margin-bottom: 7.5vh;
 }
 
-.searchBarContainer {
+.placeHolder {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	padding-top: 5vh;
-}
-
-.searchBar {
-	width: 70vw;
-	height: 7vh;
-	border-radius: 10vw;
-	border: none;
-	text-indent: 5vw;
-	font-size: 3vw;
-}
-
-.textContainer {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	padding-top: 40%;
+	margin-top: 5vh;
 }
 
 footer {
@@ -84,18 +67,11 @@ footer {
 	opacity: 0.5;
 }
 
-.searchButton {
-	width: 7.5vw;
-	margin-left: 5vw;
-	margin-right: 5vw;
-}
-
-.settingsButton {
+.searchButton, .settingsButton {
 	width: 7.5vw;
 	margin-left: 5vw;
 	margin-right: 5vw;
 	opacity: 0.5;
-
 }
 
 .profileButton {
